conditions for background change set

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body {
   background-image: url("./assets/cold-bg.jpg");
   background-size: cover;
   background-position: bottom;
-  transition: 0.4 ease-out;
+  transition: 0.4 ease-in-out;
 }
 
 .app.warm {
